--- a/naq_theme/login/messages/messages_fr.properties
+++ b/naq_theme/login/messages/messages_fr.properties
@@ -1,5 +1,5 @@
 # encoding: UTF-8
-confirmExecutionOfActions=Effectuez les actions suivantes
+confirmExecutionOfActions=Merci les actions suivantes
 invalidRequestMessage=Requête invalide
 errorTitle=Nous sommes désolés...
 errorTitleHtml=Nous sommes <strong>désolés</strong> ...
@@ -9,3 +9,5 @@ expiredActionTokenSessionExistsMessage=L'action a expiré. Veuillez recommencer.
 updatePasswordTitle=Mettre à jour le mot de passe.
 updatePasswordMessage=Veuillez changer votre mot de passe pour activer votre compte.
 emailInstruction=Veuillez entrer votre nom d'utilisateur ou votre mail et nous vous enverrons les instructions pour créer un nouveau mot de passe.
+requiredAction.UPDATE_PASSWORD=Créer ou mettre à jour votre mot de passe
+proceedWithAction=Veuillez cliquer ici
