--- a/naq_theme/login/messages/messages_fr.properties
+++ b/naq_theme/login/messages/messages_fr.properties
@@ -1,5 +1,5 @@
 # encoding: UTF-8
-confirmExecutionOfActions=Merci les actions suivantes
+confirmExecutionOfActions=Merci d'effectuer les actions suivantes
 invalidRequestMessage=Requête invalide
 errorTitle=Nous sommes désolés...
 errorTitleHtml=Nous sommes <strong>désolés</strong> ...
@@ -7,7 +7,7 @@ expiredActionMessage=L'action a expiré. Veuillez vous connecter pour continuer.
 expiredActionTokenNoSessionMessage=L'action a expiré.
 expiredActionTokenSessionExistsMessage=L'action a expiré. Veuillez recommencer.
 updatePasswordTitle=Mettre à jour le mot de passe.
-resetPasswordMessage=Vous devez metre à jour votre mot de passe.
+resetPasswordMessage=Vous devez mettre à jour votre mot de passe.
 updatePasswordMessage=Veuillez changer votre mot de passe pour activer votre compte.
 emailInstruction=Veuillez entrer votre nom d'utilisateur ou votre mail et nous vous enverrons les instructions pour créer un nouveau mot de passe.
 requiredAction.UPDATE_PASSWORD=Créer ou mettre à jour votre mot de passe
