Correction thème et quote traduction

--- a/naq_theme/login/messages/messages_fr.properties
+++ b/naq_theme/login/messages/messages_fr.properties
@@ -3,9 +3,9 @@ confirmExecutionOfActions=Effectuez les actions suivantes
 invalidRequestMessage=Requête invalide
 errorTitle=Nous sommes désolés...
 errorTitleHtml=Nous sommes <strong>désolés</strong> ...
-expiredActionMessage=L'action a expiré. Veuillez vous connecter pour continuer.
-expiredActionTokenNoSessionMessage=L'action a expiré.
-expiredActionTokenSessionExistsMessage=L'action a expiré. Veuillez recommencer.
+expiredActionMessage=L'''action a expiré. Veuillez vous connecter pour continuer.
+expiredActionTokenNoSessionMessage=L'''action a expiré.
+expiredActionTokenSessionExistsMessage=L'''action a expiré. Veuillez recommencer.
 updatePasswordTitle=Mettre à jour le mot de passe.
 updatePasswordMessage=Veuillez changer votre mot de passe pour activer votre compte.
-emailInstruction=Veuillez entrer votre nom d'utilisateur ou votre mail et nous vous enverrons les instructions pour créer un nouveau mot de passe.
+emailInstruction=Veuillez entrer votre nom d'''utilisateur ou votre mail et nous vous enverrons les instructions pour créer un nouveau mot de passe.
