Correction thème et quote traduction(1)

--- a/naq_theme/login/messages/messages_fr.properties
+++ b/naq_theme/login/messages/messages_fr.properties
@@ -9,6 +9,6 @@ expiredActionTokenSessionExistsMessage=L'''action a expiré. Veuillez recommence
 updatePasswordTitle=Mettre à jour le mot de passe.
 resetPasswordMessage=Vous devez mettre à jour votre mot de passe.
 updatePasswordMessage=Veuillez changer votre mot de passe pour activer votre compte.
-emailInstruction=Veuillez entrer votre nom d'utilisateur ou votre mail et nous vous enverrons les instructions pour créer un nouveau mot de passe.
+emailInstruction=Veuillez entrer votre nom d'''utilisateur ou votre mail et nous vous enverrons les instructions pour créer un nouveau mot de passe.
 requiredAction.UPDATE_PASSWORD=Créer ou mettre à jour votre mot de passe
 proceedWithAction=Veuillez cliquer ici
